syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.blog";
option java_outer_classname = "BlogProto";

package blog;

// Blog Service Definition
// REST API와 동일한 기능을 gRPC로 제공합니다.
service BlogService {
  // 모든 게시글 조회
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);

  // 특정 게시글 조회
  rpc GetPost(GetPostRequest) returns (Post);

  // 새 게시글 생성
  rpc CreatePost(CreatePostRequest) returns (Post);

  // 게시글 수정
  rpc UpdatePost(UpdatePostRequest) returns (Post);

  // 게시글 삭제
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

// Post 메시지 (Entity에 대응)
message Post {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string created_at = 5;
  string updated_at = 6;
}

// Request/Response 메시지들

message ListPostsRequest {
  optional string author = 1;  // 필터링용 작성자 (선택적)
}

message ListPostsResponse {
  repeated Post posts = 1;
}

message GetPostRequest {
  int64 id = 1;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author = 3;
}

message UpdatePostRequest {
  int64 id = 1;
  optional string title = 2;
  optional string content = 3;
}

message DeletePostRequest {
  int64 id = 1;
}

message DeletePostResponse {
  bool success = 1;
  string message = 2;
}
